# Meu_app_de_tarefas

./: .gitignore  main.py  pyproject.toml
.github/workflows/: build_apk.yml
